[gd_scene load_steps=5 format=3 uid="uid://yhw77wi6wbt1"]

[ext_resource type="Texture2D" uid="uid://cstforkbunckc" path="res://assets/ball_blue.png" id="1_7s05n"]
[ext_resource type="Script" path="res://Scenes/Enemies/ball.gd" id="1_h1tbf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3pskj"]
radius = 46.0109

[sub_resource type="CircleShape2D" id="CircleShape2D_r3vvn"]
radius = 53.3385

[node name="ball" type="RigidBody2D"]
collision_mask = 24
can_sleep = false
lock_rotation = true
freeze = true
freeze_mode = 1
custom_integrator = true
continuous_cd = 2
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_h1tbf")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_7s05n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3pskj")

[node name="DetectArea" type="Area2D" parent="."]
collision_mask = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource("CircleShape2D_r3vvn")

[node name="InvincibleTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="DetectArea" to="." method="_on_detect_area_body_entered"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_invincible_timer_timeout"]
